# ShortURL.py

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: 404.rst  conf.py  index.rst
shorturl/: __init__.py  client.py  http.py
