[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorturl.best"
version = "0.0.1"
authors = [
  { name="6A-Realm" },
]
description = "ShortURL API Async Wrapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}
keywords = ["shorturl", "shorturl.best"]
dependencies = [
    "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/ShortURL-Best/shorturl.py"